--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "cubiclab/admin-cube": "*",
+        "cubiclab/admin-cube": "*"
     },
     "autoload": {
         "psr-4": {
